--- a/tests/config/config.php.dist
+++ b/tests/config/config.php.dist
@@ -1,4 +1,4 @@
 <?php
   $config = array();
-  $config['limonade_base_url'] = 'http://localhost/limonade/';
+  $config['limo_base_url'] = 'http://localhost/limo/';
 ?>
